--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=dataingestion
+spring.application.name=reconciliation
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+logging.level.root=DEBUG    
+logging.level.org.hibernate.type=TRACE  
+logging.level.org.hibernate.SQL=DEBUG
