Added DbToFileReconciliationProcessor, DbToFileReconciliationReader, DbToFileReconciliationWriter, FileToDbReconciliationProcessor, FileToDbReconciliationReader, FileToDbReconciliationWriter, ReconciliationBatchConfig, ReconciliationController, ReconciliationEngine, ReconciliationJobService, schema.sql, visa_base2_transactions.csv

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 logging.level.root=DEBUG    
 logging.level.org.hibernate.type=TRACE  
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=TRACE
+
+reconciliation.input.file=visa_base2_transactions.csv
+reconciliation.output.file=visa_base2_transactions_output.csv
