--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,10 @@ logging.level.root=DEBUG
 logging.level.org.hibernate.type=TRACE  
 logging.level.org.hibernate.SQL=TRACE
 
+#initialize schema on startup
+spring.batch.jdbc.initialize-schema=always
+#disable batch job execution on startup
+spring.batch.job.enabled=false
+
 reconciliation.input.file=visa_base2_transactions.csv
 reconciliation.output.file=visa_base2_transactions_output.csv
