performace tuning of two way reconciliation , added parllel stream, Thread pool

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-logging.level.root=DEBUG    
+logging.level.root=INFO
 logging.level.org.hibernate.type=TRACE  
-logging.level.org.hibernate.SQL=TRACE
+#logging.level.org.hibernate.SQL=TRACE
 
 #initialize schema on startup
 spring.batch.jdbc.initialize-schema=always
@@ -20,3 +20,18 @@ spring.batch.job.enabled=false
 
 reconciliation.input.file=visa_base2_transactions.csv
 reconciliation.output.file=visa_base2_transactions_output.csv
+
+# Reconciliation Scheduling Configuration
+reconciliation.file.path= ${RECONCILIATION_FILE_PATH:visabase2test.csv}
+reconciliation.report.path= ${RECONCILIATION_REPORT_PATH:report.xlsx}
+# Batch size for reconciliation
+reconciliation.batch.size= 1000
+# Enable scheduling 
+reconciliation.schedule.enabled= true
+# Run at 11 PM daily    
+reconciliation.schedule.cron= 0 0 16 * * ? 
+
+# Thread pool configuration
+reconciliation.thread-pool.core-size= 4
+reconciliation.thread-pool.max-size= 8
+reconciliation.thread-pool.queue-capacity= 100
